<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.linyulong.timepickerdemo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_unit"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/select_date"
            android:textColor="@color/color_text_unselected"
            android:textSize="15sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/selectDate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_item_bg"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/current_date"
            android:textColor="@color/color_desc"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/currentDate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:gravity="center"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:textColor="@color/color_result"
            android:textSize="15sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_unit"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/select_time"
            android:textColor="@color/color_text_unselected"
            android:textSize="15sp" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/selectTime"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/color_item_bg"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:background="@null"
            android:gravity="center"
            android:text="@string/current_time"
            android:textColor="@color/color_desc"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/currentTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:gravity="center"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:textColor="@color/color_result"
            android:textSize="15sp" />

    </RelativeLayout>
</LinearLayout>
